crates/rome_formatter/tests/specs/prettier/cursor/cursor-3.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: cursor-3.js

---
# Input
```js


  <|>

  const y = 5

```

# Output
```js


  <|>;

const y = 5;

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ cursor-3.js:3:3
  │
3 │   <|>
  │   ^^^ TypeScript only syntax


```


